# Multipurpose-Optimization-of-Protein-Sequences

./: .gitignore  Example_seq.md  README.md
Example_data/: alphafold3_round_3002-seed15.cif  alphafold3_round_5871.cif  alphafold_round_4664-seed17.cif
data/random_mutation_data/: results.csv
experiment_code/: config.yaml  install_dependencies.sh  main.py  pyproject.toml  script.sh
experiment_code/evaluation_functions/tmscore/: utils.py
experiment_code/nsga_ii/mutation_and_generation/: utils.py
experiment_code/protein_mpnn/: protein_mpnn_utils.py  utils.py
plot-code/: fig1_a.py  fig1_b.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  metrics.ipynb
