[project]
name = "experiment-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colabfold[alphafold]",
    "jax[cuda12]>=0.5.3",
    "silence-tensorflow>=1.2.3",
    "torch==2.6.0",
]

[tool.uv.sources]
colabfold = { git = "https://github.com/sokrypton/ColabFold", rev = "5d663c87915adbc4df6e2f759a6ed38869b193e7" }

[[tool.uv.index]]
url = "file:///gs/bs/tga-cddlab/akiba/test/Multipurpose-Optimization-of-Protein-Sequences/experiment_code/pytorch-cu124"
